First pass for the FAIR-enabling portfolio user guide incl updates ton config and sidebars

--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,11 @@ defaults:
       path: "pages/resources"
     values:
       sidebar: resources
+  -
+    scope:
+      path: "pages/portfolio"
+    values:
+      sidebar: portfolio
 
 theme_variables:
   # git_host: GitHub
