--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -1,6 +1,8 @@
 subitems:
 - title: EIP 24-26
   url: /index
+- title: Portfolio
+  url: /portfolio
 - title: Framework
   url: /framework
 - title: Stories
